--- a/src/main.css
+++ b/src/main.css
@@ -54,7 +54,7 @@ footer > * {
 
 header {
     @apply text-center h-screen grid grid-rows-3 justify-center;
-    background-image: url("/assets/20230331_4.png");
+    background-image: url("/assets/20230331_4.webp");
     background-position: center;
     background-size: cover;
 }
@@ -158,7 +158,7 @@ footer p a { @apply smalltext-hover }
         !max-w-full w-full h-[110vh] 
         flex flex-col place-content-center
     ;
-    background-image: url("/assets/20230331_0.png");
+    background-image: url("/assets/20230331_0.webp");
     background-position: center;
     background-size: cover;
 }
